--- a/decoupling-from-the-state-layer/index.html
+++ b/decoupling-from-the-state-layer/index.html
@@ -8,9 +8,9 @@
 
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,700|Montserrat:300,400,500,600,700" rel="stylesheet">
 
-  <link rel="stylesheet" href="../dist/reset.css">
-  <link rel="stylesheet" href="../dist/reveal.css">
-  <link rel="stylesheet" href="../dist/theme/iagodahlem.css" id="theme">
+  <link rel="stylesheet" href="dist/reset.css">
+  <link rel="stylesheet" href="dist/reveal.css">
+  <link rel="stylesheet" href="dist/theme/iagodahlem.css" id="theme">
 
   <!-- Theme used for syntax highlighted code -->
   <link rel="stylesheet" href="plugin/highlight/dracula.css" id="highlight-theme">
@@ -279,7 +279,7 @@ const Counter = () => {
     </div>
   </div>
 
-  <script src="../dist/reveal.js"></script>
+  <script src="dist/reveal.js"></script>
   <script src="plugin/notes/notes.js"></script>
   <script src="plugin/markdown/markdown.js"></script>
   <script src="plugin/highlight/highlight.js"></script>
