Update html and css talk

--- a/html-and-css-the-backbone-of-the-web/index.html
+++ b/html-and-css-the-backbone-of-the-web/index.html
@@ -323,7 +323,7 @@
         </section>
 
         <section class="align-left">
-          <h1>Thanks!</h1>
+          <h1>Questions?</h1>
           <p><a href="https://iagodahlem.com">iagodahlem.com</a></p>
         </section>
       </div>
